# cursus-v1

./: .dockerignore  .editorconfig  .env.example  .flaskenv  .gitignore  Dockerfile  Dockerfile.prod  README.md  cursus-db.session.sql  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml  publish-docker-image.yml
cursus/: __init__.py  app.py  assets.py  config.py  context.py  error.py  requests.py  routes.py  swagger.py
cursus/apis/: __init__.py  course.py  department.py  find.py  school.py  search.py  swagger.json  university.py
cursus/models/: __init__.py  country.py  course.py  department.py  history.py  school.py  token.py  university.py  user.py
cursus/schema/: __init__.py  country.py  course.py  department.py  history.py  school.py  university.py
cursus/static/: manifest.json  robots.txt  sw.js
cursus/templates/: 4xx.html  _base.html  _profile.html  about.html  demo.html  doc-campus.html  doc-courses.html  doc-details.html  doc-domains.html  doc-more.html  doc-search.html  docs.html  index.html  login.html  privacy.html  profile-account.html  profile-history.html  profile-token.html  profile.html
cursus/util/: __init__.py  account.py  datetime.py  exceptions.py  extensions.py  generate_content_hash.py  profile.py  requests.py  string_builder.py
cursus/views/: __init__.py  error.py  oauth.py  protected.py  public.py  university.py
data/: country-iso.tsv  initial-courses.tsv  initial-departments.tsv  initial-school.tsv  top-100-universities.tsv  top-100-university-campuses.tsv  top-100-university-domains.tsv  top-100-university-founders.tsv
migrations/versions/: 069ffdf40da8_add_type_column.py  06afe4b68ae2_update_foreign_key_to_university_short_.py  0f0be5cd197e_remove_access_token_from_account_table.py  11beea9988bd_remove_explicit_state_and_country_.py  21fa633259ab_add_unique_string_id_for_university_.py  22b0dd0cb763_add_active_token_database.py  2911b29178ab_create_index_for_university_full_name.py  310cab0673ee_update_former_name_length_to_128_full_.py  345a83f99da3_update_token_column_from_12_to_64.py  34b291b84355_remove_foreign_key_constraints_on_token_.py  3832df4d229e_update_metadata_for_university_model.py  3f57e178746b_remove_address_number_from_university_.py  52b730737e11_add_school_model.py  53fd93622375_update_unique_constraints_on_university_.py  60a19285d647_.py  6bd99e47d745_update_undergrad_graduate_for_.py  7b42a1eed88e_add_university_domain.py  7ceb28afd876_add_course_model.py  (+25 more)
nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf.template
scripts/: hex_to_rgb.py
sql/: create-alembic-version.sql  create-country.sql  create-university-campus.sql  create-university-domain.sql  create-university-domains-table.sql  create-university-founder-sequence.sql  create-university-founder.sql  create-university.sql  select-university.sql
test/: conftest.py  test_api_search.py  test_apis.py  test_factory.py
(+46 files in other folders)
