[project]
dependencies = [
    "Flask>=3.0.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "waitress>=2.1.2",
    "Flask-SQLAlchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "Flask-Migrate>=4.0.0",
    "Flask-Marshmallow>=0.15.0",
    "Flask-Login>=0.6.3",
    "Flask-Assets>=2.1.0",
    "Flask-Caching>=2.1.0",
    "flask-swagger-ui>=4.11.0",
    "marshmallow-sqlalchemy>=0.29.0",
    "requests>=2.31.0",
    "cuid2>=2.0.0",
    "redis>=5.0.0",
    "pytest>=7.4.3",
    "pytest-xdist>=3.5.0",
    "coverage>=7.3.4",
    "cssmin",
    "jsmin",
]
name = "cursus"
version = "0.0.9"
description = "An open-source API repository for university courses."
license = { file = "LICENSE" }
authors = [{ name = "Richard H Nguyen", email = "richard@richardhnguyen.com" }]
requires-python = ">=3.11.0"

[project.scripts]
cursus = "manage:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["test"]
markers = ["config", "swjs", "robots", "images", "after_request"]

[tool.coverage.run]
branch = true
source = ["cursus"]

# For black formatter
[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'
